<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathalima.jogodavelha.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_home"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvJogador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/jogador1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtJogador1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:labelFor="@id/tvJogador1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvJogador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/jogador2"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtJogador2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:labelFor="@id/tvJogador2"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/jogar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:onClick="jogar"/>

</LinearLayout>
