<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jonathalima.jogodavelha.PlacarActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black"
        android:elevation="5sp">

        <ImageButton
            android:id="@+id/voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/back_button"
            android:contentDescription="@string/botao_voltar"
            android:onClick="voltar"
            android:padding="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/placar"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/fundoPlacar"
        android:elevation="10sp">

        <TextView
            android:id="@+id/letraX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/letra_x"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/placarJogador1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toLeftOf="@id/letraX"
            android:text="@string/placar_jogo"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/placarJogador2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toRightOf="@id/letraX"
            android:text="@string/placar_jogo"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="5sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nomeJogador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/jogador1"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/placarEspecificoJogador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/placar_jogadores"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:elevation="5sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nomeJogador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/jogador2"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/placarEspecificoJogador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/placar_jogadores"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
